[metadata]
name = storm
version = 0.0.1
author = Ben Arnao
author_email = barnao@gmail.com
description = neural network hyperparameter tuner
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ben-arnao/StoRM
project_urls =
    Bug Tracker = https://github.com/ben-arnao/StoRM/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
